[gd_scene load_steps=2 format=3 uid="uid://lqfqpit6bkpc"]

[ext_resource type="Script" path="res://new_order_menu.gd" id="1_fudmb"]

[node name="NewOrderMenu" type="Node2D"]
script = ExtResource("1_fudmb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 322.0
offset_bottom = 104.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="OriginLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Choose Origin
"

[node name="OriginOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="OriginErrorLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Origin and Destination cannot be the same!"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DestinationLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Choose Destination
"

[node name="DestinationOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="DestinationErrorLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Origin and Destination cannot be the same!"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CargoChoiceLabel" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Choose Cargo
"

[node name="CargoChoiceOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CargoVolumeLabel" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Enter Cargo Total Volume:"

[node name="CargoVolumeTextEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
placeholder_text = "Enter Quantity"

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CargoMassLabel" type="Label" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Cargo Total Mass:"

[node name="CargoMass" type="Label" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "9999 kg"

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AvailableShipsLabel" type="Label" parent="VBoxContainer/HBoxContainer6"]
layout_mode = 2
text = "Available Ships:"

[node name="AvailableShipsOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer6"]
layout_mode = 2
